# SG

./: CMakeLists.txt  README.md  decision_tree_model.pkl  demo.py  isolation_forest_model.pkl  kmeans_model.pkl  main.cpp  model_training.py  model_training_decision_tree.py  model_training_isolation_forest.py  model_training_kmeans.py  model_training_random_forest.py  network_traffic.csv  prediction_script.py  random_forest_model.pkl  real_time_prediction.py  requirements.txt  setup.bat  sim_dos_mitm_fdi.py  sim_dos_traffic.py  sim_mitm_traffic.py  sim_norm_traffic.py  simulation_script.py  wireshark_capture.py
M2/: model_training_decision_tree.py  model_training_isolation_forest.py  sim_dos_traffic.py
M3/: real_time_prediction.py  simulation_script.py
